# flux64

./: .gitignore  meson.build
src/: main.c  meson.build
src/elfloader/: elfloader.c  meson.build
src/elfloader/include/: elfloader.h
src/include/: debug.h
src/platform/: meson.build  virtual.c
src/platform/include/: virtual.h
src/x64emu/: context.c  decode.c  decode.h  decode_0f.c  decode_0f.h  decode_private.h  emu.c  execute.c  execute.h  execute_0f.c  execute_0f.h  execute_private.h  meson.build  modrm.c  modrm.h  stack.c  stack_private.h  syscall.c  syscall.h  x64context.c  x64decode.c  x64decode_0f.c  x64emu.c  x64execute.c  x64execute_0f.c  x64execute_private.h  x64flags_private.h  x64modrm.c  x64regs_private.h  x64stack.c  x64stack_private.h  x64syscall.c
src/x64emu/include/: x64context.h  x64decode.h  x64emu.h  x64execute.h  x64flags.h  x64instr.h  x64modrm.h  x64regs.h  x64stack.h  x64syscall.h
